kuber-homeworks/3.3/files/svc-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-backend
  namespace: app
spec:
  selector:
    app: backend
  ports:
    - name: http-port
      protocol: TCP
      port: 9002
      targetPort:  8080
