kuber-homeworks/3.3/files/svc-cache.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-cache
  namespace: app
spec:
  selector:
    app: cache
  ports:
    - name: http-port
      protocol: TCP
      port: 9003
      targetPort:  8080
