kuber-homeworks/3.3/files/svc-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-frontend
  namespace: app
spec:
  selector:
    app: frontend
  ports:
    - name: http-port
      protocol: TCP
      port: 9001
      targetPort:  8080
